[gd_scene load_steps=4 format=2]

[ext_resource path="res://StartMenu/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/StartMenu/title_card.png" type="Texture" id=2]
[ext_resource path="res://UI/Elements/MenuButton.tscn" type="PackedScene" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.602539
margin_top = 0.602554
margin_right = 0.602539
margin_bottom = 0.602539
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="NewGame" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.0
margin_top = 119.397
margin_right = -196.0
margin_bottom = 135.397
text = "New game"

[node name="Exit" parent="." instance=ExtResource( 3 )]
margin_left = 79.3975
margin_top = 419.397
margin_right = -680.603
margin_bottom = -90.6025
focus_neighbour_top = NodePath("../NewGame")
text = "Exit"
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
